fixed button color on iphone

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     width: 100px; 
     height: 100px; 
     font-size: 50px;
+    background: lightgrey;
 
 } 
 #result {
@@ -27,5 +28,7 @@
         }
     #backing {
         width: 375px;
-        height: 100%
+        height: 100%;
+        padding: 31px;
+    }
 }
